@@ -255,10 +255,10 @@ TP_CFLAGS = -I/usr/local/FFV/TextParser/include
 TP_DIR = /usr/local/FFV/TextParser
 TP_LDFLAGS = -L/usr/local/FFV/TextParser/lib -lTPmpi
 VERSION = 2.0.3
-abs_builddir = /Daily/Development/SphDev/Module/FFVC/FFVC-2.0.2/doc
-abs_srcdir = /Daily/Development/SphDev/Module/FFVC/FFVC-2.0.2/doc
-abs_top_builddir = /Daily/Development/SphDev/Module/FFVC/FFVC-2.0.2
-abs_top_srcdir = /Daily/Development/SphDev/Module/FFVC/FFVC-2.0.2
+abs_builddir = /Daily/Development/SphDev/Module/FFVC/FFVC-2.0.3/doc
+abs_srcdir = /Daily/Development/SphDev/Module/FFVC/FFVC-2.0.3/doc
+abs_top_builddir = /Daily/Development/SphDev/Module/FFVC/FFVC-2.0.3
+abs_top_srcdir = /Daily/Development/SphDev/Module/FFVC/FFVC-2.0.3
 ac_ct_CC = mpicc
 ac_ct_CXX = 
 ac_ct_F77 = gfortran
@@ -280,7 +280,7 @@ host_alias =
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /Daily/Development/SphDev/Module/FFVC/FFVC-2.0.2/install-sh
+install_sh = ${SHELL} /Daily/Development/SphDev/Module/FFVC/FFVC-2.0.3/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
